--- a/package.json
+++ b/package.json
@@ -37,35 +37,36 @@
   "dependencies": {
     "@nextcloud/auth": "^1.3.0",
     "@nextcloud/axios": "^1.6.0",
-    "@nextcloud/dialogs": "^3.1.1",
+    "@nextcloud/dialogs": "^3.1.2",
     "@nextcloud/initial-state": "^1.2.0",
     "@nextcloud/l10n": "^1.4.1",
     "@nextcloud/moment": "^1.1.1",
-    "@nextcloud/router": "^1.1.0",
-    "@nextcloud/vue": "^3.7.2",
+    "@nextcloud/router": "^2.0.0",
+    "@nextcloud/vue": "^3.9.0",
     "@nextcloud/vue-dashboard": "^1.1.0",
+    "node-polyfill-webpack-plugin": "^1.1.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/eslint-parser": "^7.13.10",
+    "@babel/core": "^7.13.16",
+    "@babel/eslint-parser": "^7.13.14",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.13.10",
-    "@nextcloud/browserslist-config": "^2.0.0",
-    "@nextcloud/eslint-config": "^4.0.0",
+    "@babel/preset-env": "^7.13.15",
+    "@nextcloud/browserslist-config": "^2.1.0",
+    "@nextcloud/eslint-config": "^5.0.0",
     "@nextcloud/eslint-plugin": "^2.0.0",
-    "@nextcloud/webpack-vue-config": "^3.0.0",
+    "@nextcloud/webpack-vue-config": "^4.0.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.1.3",
-    "eslint": "^7.22.0",
+    "css-loader": "^5.2.4",
+    "eslint": "^7.24.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-vue": "^7.7.0",
-    "eslint-webpack-plugin": "^2.5.2",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^6.2.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
@@ -77,8 +78,8 @@
     "url-loader": "^4.1.1",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.26.3",
-    "webpack-cli": "^4.5.0",
+    "webpack": "^5.35.0",
+    "webpack-cli": "^4.6.0",
     "webpack-node-externals": "^2.5.2"
   }
 }
