accept URL for oAuth with insignificant differences

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
 		"build": "NODE_ENV=production webpack --progress --config webpack.js",
 		"dev": "NODE_ENV=development webpack --progress --config webpack.js",
 		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
-		"lint": "eslint --ext .js,.vue src",
-		"lint:fix": "eslint --ext .js,.vue src --fix",
+		"lint": "eslint --ext .js,.vue src tests",
+		"lint:fix": "eslint --ext .js,.vue src tests --fix",
 		"stylelint": "stylelint src",
-		"stylelint:fix": "stylelint src --fix"
+		"stylelint:fix": "stylelint src --fix",
+		"test:unit": "jest"
 	},
 	"repository": {
 		"type": "git",
@@ -52,6 +53,9 @@
 		"@nextcloud/browserslist-config": "^2.2.0",
 		"@nextcloud/eslint-config": "^6.1.0",
 		"@nextcloud/stylelint-config": "^2.0.1",
-		"@nextcloud/webpack-vue-config": "^4.1.0"
+		"@nextcloud/webpack-vue-config": "^4.1.0",
+		"@vue/cli-plugin-unit-jest": "~4.5.0",
+		"@vue/test-utils": "^1.3.0",
+		"jest": "^26.6.3"
 	}
 }
