--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 		"@nextcloud/webpack-vue-config": "^4.1.0",
 		"@vue/cli-plugin-unit-jest": "~4.5.0",
 		"@vue/test-utils": "^1.3.0",
-		"jest": "^26.6.3"
+		"jest": "^26.6.3",
+		"stylelint-config-recommended-vue": "^1.1.0",
+		"stylelint-scss": "^4.1.0"
 	}
 }
