--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+          tools: composer, phpunit
+
+      - name: Setup NodeJS
+        uses: actions/setup-node@v2
         with:
           node-version: '16'
+
+      - name: Install PHP Dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
 
       - name: Install NPM Dependencies
         run: npm install
@@ -23,5 +33,8 @@ jobs:
       - name: Style Lint
         run: npm run stylelint
 
-      - name: Unit Tests
+      - name: Vue Unit Tests
         run: npm run test:unit
+
+      - name: PHP Unit Tests
+        run: make test
