--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,6 @@ jobs:
         run: npm run test:unit
 
       - name: PHP Unit Tests
-        run: make test
+        run: |
+          git clone --depth 1 https://github.com/nextcloud/server.git -b v23.0.0
+          make test
