--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"lint:fix": "eslint --ext .js,.vue src tests --fix",
 		"stylelint": "stylelint css src",
 		"stylelint:fix": "stylelint css src --fix",
-		"test:unit": "jest"
+		"test:unit": "jest --silent"
 	},
 	"repository": {
 		"type": "git",
