--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,13 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install PHP Dependencies
-        run: composer install --no-progress --prefer-dist --optimize-autoloader
+        run: |
+          composer install --no-progress --prefer-dist --optimize-autoloader
+          git clone --depth 1 https://github.com/nextcloud/server.git -b v23.0.0
+          cd server && git submodule update --init
+
+      - name: PHP stan
+        run: make phpstan
 
       - name: PHP code style
         run: composer run cs:check || ( echo 'Please run `composer run cs:fix` to format your code' && exit 1 )
@@ -49,9 +55,7 @@ jobs:
         run: npm run stylelint
 
       - name: PHP & Vue Unit Tests
-        run: |
-          git clone --depth 1 https://github.com/nextcloud/server.git -b v23.0.0
-          make test
+        run: make test
 
       - name: JS Code Coverage Summary Report
         if: ${{ github.event_name == 'pull_request' }}
