--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ name: CI
 jobs:
   build:
     name: CI
+    strategy:
+      matrix:
+        nextcloudVersion: [ v23.0.0, master ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,7 +39,7 @@ jobs:
       - name: Install PHP Dependencies
         run: |
           composer install --no-progress --prefer-dist --optimize-autoloader
-          git clone --depth 1 https://github.com/nextcloud/server.git -b v23.0.0
+          git clone --depth 1 https://github.com/nextcloud/server.git -b ${{ matrix.nextcloudVersion }}
           cd server && git submodule update --init
 
       - name: PHP stan
