add script differently depending on the version of nextcloud
Signed-off-by: Artur Neumann <artur@jankaritech.com>

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,4 @@ parameters:
     bootstrapFiles:
         - bootstrap.php
     checkGenericClassInNonGenericObjectType: false
+    reportUnmatchedIgnoredErrors: false
