Add composer allow plugins
Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
 		"cs:fix": "php-cs-fixer fix",
 		"cs:check": "php-cs-fixer fix --dry-run --diff",
 		"phpstan": "phpstan analyse"
+	},
+	"config": {
+		"allow-plugins": {
+			"phpstan/extension-installer": true
+		}
 	}
 }
