throw exception in OpenProject Oauth URL getter if admin config is not ok
Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"stylelint": "stylelint css src",
 		"stylelint:fix": "stylelint css src --fix",
 		"test:unit": "jest --silent",
-		"test:unit:watch": "jest --watch"
+		"test:unit:watch": "jest --watch --no-coverage"
 	},
 	"repository": {
 		"type": "git",
