--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     name: CI
     strategy:
       matrix:
-        nextcloudVersion: [ v23.0.0, master ]
+        nextcloudVersion: [ v23.0.0 ]
         phpVersion: [ 7.4, 8.0 ]
     runs-on: ubuntu-latest
     steps:
