--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,10 @@ jobs:
     strategy:
       matrix:
         nextcloudVersion: [ v23.0.4, master ]
-        phpVersion: [ 7.4, 8.0 ]
+        phpVersion: [ 7.4, 8.0, 8.1 ]
+        exclude:
+          - nextcloudVersion: v23.0.4
+            phpVersion: 8.1
     runs-on: ubuntu-latest
     steps:
       - name: Cancel previous runs
