--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 		"@nextcloud/l10n": "^1.4.1",
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^4.2.0",
+		"@nextcloud/vue": "^5.3.1",
 		"@nextcloud/vue-dashboard": "^2.0.1",
 		"lodash": "^4.17.21",
 		"vue": "^2.6.14"
@@ -53,11 +53,13 @@
 	"devDependencies": {
 		"@nextcloud/babel-config": "^1.0.0",
 		"@nextcloud/browserslist-config": "^2.2.0",
-		"@nextcloud/eslint-config": "^7.0.2",
+		"@nextcloud/eslint-config": "^8.0.0",
 		"@nextcloud/stylelint-config": "^2.1.2",
 		"@nextcloud/webpack-vue-config": "^5.0.0",
-		"@vue/cli-plugin-unit-jest": "~4.5.0",
+		"@vue/cli-plugin-unit-jest": "^4.5.17",
 		"@vue/test-utils": "^1.3.0",
-		"jest": "^26.6.3"
+		"eslint-webpack-plugin": "^3.1.1",
+		"jest": "^26.6.3",
+		"stylelint-webpack-plugin": "^3.3.0"
 	}
 }
