--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
 		"@nextcloud/vue": "^5.3.1",
 		"@nextcloud/vue-dashboard": "^2.0.1",
 		"lodash": "^4.17.21",
-		"vue": "^2.6.14"
+		"vue": "^2.6.14",
+		"vue-material-design-icons": "^5.0.0"
 	},
 	"devDependencies": {
 		"@nextcloud/babel-config": "^1.0.0",
