--- a/package.json
+++ b/package.json
@@ -56,10 +56,10 @@
 		"@nextcloud/eslint-config": "^8.0.0",
 		"@nextcloud/stylelint-config": "^2.1.2",
 		"@nextcloud/webpack-vue-config": "^5.0.0",
-		"@vue/cli-plugin-unit-jest": "^4.5.17",
+		"@vue/cli-plugin-unit-jest": "~5.0.0",
 		"@vue/test-utils": "^1.3.0",
+		"@vue/vue2-jest": "^27.0.0",
 		"eslint-webpack-plugin": "^3.1.1",
-		"jest": "^26.6.3",
 		"stylelint-webpack-plugin": "^3.3.0"
 	}
 }
