--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@nextcloud/router": "^2.0.0",
 		"@nextcloud/vue": "^5.3.1",
 		"@nextcloud/vue-dashboard": "^2.0.1",
+		"dompurify": "^2.3.8",
 		"lodash": "^4.17.21",
 		"vue": "^2.6.14",
 		"vue-material-design-icons": "^5.0.0"
