--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: postgres:alpine
     container_name: integration_openproject_db
     restart: always
-    ports:
-      - "5433:5432"
     volumes:
       - db:/var/lib/postgresql/data
+    networks:
+      - nextcloud
     environment:
       - POSTGRES_DB=nextcloud
       - POSTGRES_USER=nextcloud
@@ -18,12 +18,17 @@ services:
     image: nextcloud:apache
     container_name: integration_openproject_nc
     restart: always
-    network_mode: "host"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    ports:
+      - "8080:80"
     volumes:
       - nextcloud:/var/www/html
       - ${APP_DIR:-./../../custom_apps}:/var/www/html/custom_apps
+    networks:
+      - nextcloud
     environment:
-      - POSTGRES_HOST=localhost:5433
+      - POSTGRES_HOST=db
       - POSTGRES_DB=nextcloud
       - POSTGRES_USER=nextcloud
       - POSTGRES_PASSWORD=nextcloud
@@ -36,10 +41,15 @@ services:
     restart: always
     volumes:
       - nextcloud:/var/www/html
+    networks:
+      - nextcloud
     entrypoint: /cron.sh
     depends_on:
       - db
 
 volumes:
   db:
+  nextcloud:
+
+networks:
   nextcloud:
