run tests with NC22
Signed-off-by: Artur Neumann <artur@jankaritech.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,11 @@ jobs:
     name: CI
     strategy:
       matrix:
-        nextcloudVersion: [ v23.0.4, v24.0.0, master ]
+        nextcloudVersion: [ v22.2.9, v23.0.4, v24.0.0, master ]
         phpVersion: [ 7.4, 8.0, 8.1 ]
         exclude:
+          - nextcloudVersion: v22.2.9
+            phpVersion: 8.1
           - nextcloudVersion: v23.0.4
             phpVersion: 8.1
           - nextcloudVersion: v24.0.0
