--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,14 @@ jobs:
     name: CI
     strategy:
       matrix:
-        nextcloudVersion: [ v22.2.9, v23.0.4, v24.0.0, master ]
+        nextcloudVersion: [ stable22, stable23, stable24, master ]
         phpVersion: [ 7.4, 8.0, 8.1 ]
         exclude:
-          - nextcloudVersion: v22.2.9
+          - nextcloudVersion: stable22
             phpVersion: 8.1
-          - nextcloudVersion: v23.0.4
+          - nextcloudVersion: stable23
             phpVersion: 8.1
-          - nextcloudVersion: v24.0.0
+          - nextcloudVersion: stable24
             phpVersion: 8.1
     runs-on: ubuntu-latest
     steps:
