--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,7 @@ jobs:
         env:
           NEXTCLOUD_BASE_URL: http://localhost:8080
         run: |
-          git clone --depth 1 git@github.com:nextcloud/activity.git -b ${{ matrix.nextcloudVersion }} server/apps/activity
+          git clone --depth 1 https://github.com/nextcloud/activity.git -b ${{ matrix.nextcloudVersion }} server/apps/activity
           mkdir -p server/apps/integration_openproject
           cp -r `ls -A | grep -v 'server'` server/apps/integration_openproject/
           cd server
