Revert "drop NC 22"
This reverts commit eceeec024c57730cc7f0af4c0f734d4854e91384.

Signed-off-by: Artur Neumann <artur@jankaritech.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,11 @@ jobs:
     name: CI
     strategy:
       matrix:
-        nextcloudVersion: [ stable23, stable24, stable25, master ]
+        nextcloudVersion: [ stable22, stable23, stable24, stable25, master ]
         phpVersion: [ 7.4, 8.0, 8.1 ]
         exclude:
+          - nextcloudVersion: stable22
+            phpVersion: 8.1
           - nextcloudVersion: stable23
             phpVersion: 8.1
           - nextcloudVersion: stable24
