run OP as service in CI
Signed-off-by: Artur Neumann <artur@jankaritech.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,21 @@ jobs:
           - nextcloudVersion: stable24
             phpVersion: 8.1
     runs-on: ubuntu-latest
+    services:
+      openproject:
+        image: openproject/community:12
+        ports:
+          - 80:80
+        env:
+          OPENPROJECT_SECRET_KEY_BASE: secret
+          OPENPROJECT_HOST__NAME: localhost:8080
+          OPENPROJECT_HTTPS: false
+          OPENPROJECT_PASSWORD__MIN__LENGTH: 0
+          OPENPROJECT_ONBOARDING__ENABLED: false
+          OPENPROJECT_AUTHENTICATION_GLOBAL__BASIC__AUTH_USER: apiadmin
+          OPENPROJECT_AUTHENTICATION_GLOBAL__BASIC__AUTH_PASSWORD: apiadmin
+        volumes:
+          - ${{ github.workspace }}/test/acceptance/config/ssl.rb:/app/config/initializers/ssl.rb
     steps:
       - name: Cancel previous runs
         uses: styfle/cancel-workflow-action@0.9.1
