[ci] add `xdebug` for the phpunit tests coverage (#264)
* Try using pcov

Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

* Use xdebug for coverage

Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           php-version: ${{ matrix.phpVersion }}
           tools: composer, phpunit
+          coverage: xdebug
 
       - name: Get composer cache directory
         id: composer-cache
