--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"stylelint": "stylelint css src",
 		"stylelint:fix": "stylelint css src --fix",
 		"test:unit": "jest --silent",
-		"test:unit:watch": "jest --watch --no-coverage"
+		"test:unit:watch": "jest --watch --no-coverage",
+		"test:e2e": "cucumber-js --require cucumber.conf.js --require tests/acceptance/stepDefinitions/**/*.js --format @cucumber/pretty-formatter"
 	},
 	"repository": {
 		"type": "git",
@@ -52,15 +53,19 @@
 		"vue-material-design-icons": "^5.0.0"
 	},
 	"devDependencies": {
+		"@cucumber/cucumber": "^8.7.0",
+		"@cucumber/pretty-formatter": "^1.0.0",
 		"@nextcloud/babel-config": "^1.0.0",
 		"@nextcloud/browserslist-config": "^2.2.0",
 		"@nextcloud/eslint-config": "^8.0.0",
 		"@nextcloud/stylelint-config": "^2.1.2",
 		"@nextcloud/webpack-vue-config": "^5.0.0",
+		"@playwright/test": "^1.27.1",
 		"@vue/cli-plugin-unit-jest": "~5.0.0",
 		"@vue/test-utils": "^1.3.0",
 		"@vue/vue2-jest": "^27.0.0",
 		"eslint-webpack-plugin": "^3.1.1",
+		"playwright": "^1.27.1",
 		"stylelint-webpack-plugin": "^3.3.0"
 	}
 }
