--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@vue/test-utils": "^1.3.0",
 		"@vue/vue2-jest": "^27.0.0",
 		"eslint-webpack-plugin": "^3.1.1",
+		"node-fetch": "^2.6.7",
 		"playwright": "^1.27.1",
 		"stylelint-webpack-plugin": "^3.3.0"
 	}
