--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     name: CI
     strategy:
       matrix:
-        nextcloudVersion: [ stable22, stable23, stable24, stable25, master ]
+        nextcloudVersion: [ master ]
         phpVersion: [ 7.4 ]
         exclude:
           - nextcloudVersion: stable22
