Use pgsql of version 14 to avoid permission errors in the compose setup
Signed-off-by: Kiran Parajuli <kiranparajuli589@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   db:
-    image: postgres:alpine
+    image: postgres:14
     restart: always
     volumes:
       - db:/var/lib/postgresql/data
