--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,7 @@ jobs:
 
       - name: e2e test
         run: |
+          make
           npm run test:e2e tests/e2e/features/webUI
 
       - name: JS Code Coverage Summary Report
