--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,8 @@ jobs:
 
       - name: e2e test
         run: |
-          make
+          npm ci
+          npm run build
           npm run test:e2e tests/e2e/features/webUI
 
       - name: JS Code Coverage Summary Report
