--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,8 +68,8 @@ jobs:
         uses: skjnldsv/read-package-engines-version-actions@v1.2
         id: versions
         with:
-          fallbackNode: '16.18.1'
-          fallbackNpm: '8.19.2'
+          fallbackNode: '^14'
+          fallbackNpm: '^7'
 
       - name: Setup NodeJS ${{ steps.versions.outputs.nodeVersion }}
         uses: actions/setup-node@v2
@@ -137,9 +137,9 @@ jobs:
       - name: e2e test
         id: e2e
         run: |
-          node -v
           npm ci
           npm run build
+          ls js
           npm run test:e2e tests/e2e/features/webUI
         continue-on-error: true
 
