--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,10 +137,8 @@ jobs:
       - name: e2e test
         id: e2e
         run: |
-          node -v
-          npm ci
-          ls /home/runner/work/
-          npm run build
+          cd server/apps/integration_openproject
+          make
           npm run test:e2e tests/e2e/features/webUI
         continue-on-error: true
 
