--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
           OPENPROJECT_ONBOARDING__ENABLED: false
           OPENPROJECT_AUTHENTICATION_GLOBAL__BASIC__AUTH_USER: apiadmin
           OPENPROJECT_AUTHENTICATION_GLOBAL__BASIC__AUTH_PASSWORD: apiadmin
+          HOST: 0.0.0.0
+          OPENPROJECT_DEV_EXTRA_HOSTS: localhost
     steps:
       - name: Cancel previous runs
         uses: styfle/cancel-workflow-action@0.9.1
