--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,9 @@ jobs:
         run: curl http://localhost:8081/api/v3/users -u apiadmin:apiadmin
 
       - name: try Nextcloud
-        run: curl http://localhost:8080/status.php
+        run: |
+          curl http://localhost:8080/status.php
+          curl --silent 'http://localhost:8080/ocs/v2.php/cloud/capabilities?format=json'-H "OCS-APIREQUEST: 1" | json_pp
 
       - name: e2e test
         id: e2e
