--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,11 @@ jobs:
           - nextcloudVersion: stable24
             phpVersion: 8.1
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:latest
     services:
       openproject:
         image: openproject/community:12
-        ports:
-          - 8081:80
         env:
           OPENPROJECT_SECRET_KEY_BASE: secret
           OPENPROJECT_HOST__NAME: localhost:8081
@@ -91,11 +91,11 @@ jobs:
           ./occ config:system:set allow_local_remote_servers --value 1
           git clone --depth 1 https://github.com/nextcloud/notifications.git -b ${{ matrix.nextcloudVersion }} apps/notifications
 
-      - name: PHP stan
-        run: make phpstan
+#      - name: PHP stan
+#        run: make phpstan
 
-      - name: PHP code style
-        run: composer run cs:check || ( echo 'Please run `composer run cs:fix` to format your code' && exit 1 )
+#      - name: PHP code style
+#        run: composer run cs:check || ( echo 'Please run `composer run cs:fix` to format your code' && exit 1 )
 
       - name: Install NPM Dependencies
         run: npm install
@@ -128,10 +128,10 @@ jobs:
       - name: wait on OpenProject
         uses: iFaxity/wait-on-action@v1
         with:
-          resource: http-get://localhost:8081/api/v3/
+          resource: http-get://localhost/api/v3/
           timeout: 240000
       - name: try OpenProject
-        run: curl http://localhost:8081/api/v3/users -u apiadmin:apiadmin
+        run: curl http://localhost/api/v3/users -u apiadmin:apiadmin
 
       - name: try Nextcloud
         run: |
@@ -144,7 +144,7 @@ jobs:
           cd server
           ./occ config:system:set allow_local_remote_servers --value 1
           ./occ config:system:get allow_local_remote_servers
-          ./occ config:system:set csrf.disabled --value true 
+          ./occ config:system:set csrf.disabled --value true
           ./occ config:system:set overwrite.cli.url --value 'http://localhost:8080'
           cat config/config.php
           cd apps/integration_openproject
