omit composer install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,20 +21,20 @@ jobs:
           - nextcloudVersion: stable24
             phpVersion: 8.1
     runs-on: ubuntu-latest
-    container: ubuntu:latest
+#    container: ubuntu:latest
     services:
       openproject:
         image: openproject/community:12
+        ports:
+          - 8081:80
         env:
           OPENPROJECT_SECRET_KEY_BASE: secret
-          OPENPROJECT_HOST__NAME: localhost:8081
+#          OPENPROJECT_HOST__NAME: localhost:8081
           OPENPROJECT_HTTPS: false
           OPENPROJECT_PASSWORD__MIN__LENGTH: 0
           OPENPROJECT_ONBOARDING__ENABLED: false
           OPENPROJECT_AUTHENTICATION_GLOBAL__BASIC__AUTH_USER: apiadmin
           OPENPROJECT_AUTHENTICATION_GLOBAL__BASIC__AUTH_PASSWORD: apiadmin
-          HOST: 0.0.0.0
-          OPENPROJECT_DEV_EXTRA_HOSTS: localhost
     steps:
       - name: Cancel previous runs
         uses: styfle/cancel-workflow-action@0.9.1
@@ -83,7 +83,8 @@ jobs:
 
       - name: Install PHP Dependencies
         run: |
-          composer install --no-progress --prefer-dist --optimize-autoloader --no-dev
+          apt-get install git
+          composer install --no-progress --prefer-dist --optimize-autoloader
           git clone --depth 1 https://github.com/nextcloud/server.git -b ${{ matrix.nextcloudVersion }}
           cd server && git submodule update --init
           ./occ maintenance:install --admin-pass=admin
