add continue on error for test debug
Signed-off-by: Swikriti Tripathi <swikriti808@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,8 +89,9 @@ jobs:
 
       - name: PHP & Vue Unit Tests
         run: |
-          make phpunit
           make jsunit
+          make phpunit
+        continue-on-error: true
 
       - name: API Tests
         env:
