--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
     name: CI
     strategy:
       matrix:
-        nextcloudVersion: [ stable22, stable23, stable24, stable25, master ]
-        phpVersion: [ 7.4, 8.0, 8.1 ]
+        nextcloudVersion: [ master ]
+        phpVersion: [ 8.1 ]
         exclude:
           - nextcloudVersion: stable22
             phpVersion: 8.1
@@ -89,9 +89,8 @@ jobs:
 
       - name: PHP & Vue Unit Tests
         run: |
-          make jsunit
           make phpunit
-        continue-on-error: true
+          make jsunit
 
       - name: API Tests
         env:
